Adicionando o shortcut icon da pagina

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="./src/css/reset.css">
     <link rel="stylesheet" href="./src/css/estilos.css">
     <link rel="stylesheet" href="./src/css/scrollbar.css">
-    
+    <link rel="shortcut icon" href="https://www.freeiconspng.com/uploads/file-pokeball-png-0.png" type="image/png">
+
     <title>Listagem Pokémon - Semana do Zero ao Programador Contratado</title>
 </head>
 <body>
